# docDB

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
docs/superpowers/plans/: 2026-03-30-windows-compatibility.md
src/: __init__.py  compat.py  config.py  indexing_pipeline.py  main.py
src/document_processor/: __init__.py  metadata_extractor.py  processor.py
src/document_processor/chunking/: korean_chunker.py
src/document_processor/extractors/: __init__.py  apple_extractor.py  base_extractor.py  hwp_extractor.py  ocr_helper.py  office_extractors.py  pdf_extractor.py  text_extractors.py
src/embedding/: embedding_manager.py  local_embedder.py
src/incremental/: __init__.py  file_scanner.py  index_tracker.py
src/mcp_server/: __init__.py  server.py
src/search/: __init__.py  bm25_index.py  context_builder.py  reranker.py
src/vectorstore/: __init__.py  chroma_manager.py  retriever.py
tests/: test_compat.py  test_cuda_paths.py
